@@ -1,3 +1,8 @@
+2013-02-05  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: fix fuse_get_context() in non fuse threads.  Reported
+	by Michael Berlin
+
 2013-02-04  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: fix crash in unlock_path().  Patch by Ratna Manoj
